crates/plotnik-tests/tests/03-analyze/duplicates/duplicate_capture_in_node.txt
Q = (node
  (a) @x
  (b) @x
)
------------------ DIAGNOSTICS -------------------
error: capture `@x` already defined in this scope
 --> query.ptk:3:7
  |
2 |   (a) @x
  |       -- first captured here
3 |   (b) @x
  |       ^^
  |
help: rename one capture, or use labeled alternatives to preserve which alternative matched
------------------ DEFINITIONS -------------------
Q
